<resources>
    <string name="app_name">UltraMed</string>
    <string name="notas_first">Es muy importante que lea cuidadosamente y esté de acuerdo con las siguientes notas médicas antes de comenzar su rutina de ejercicios de Higiene Articular:</string>
    <string name="notas_second">Previo al inicio de cualquier rutina de ejercicios, es indispensable que siempre consulte con su médico especialmentre en el caso de mujeres embarazadas, lactantes o si padece de alguna condición médica.</string>
    <string name="notas_third">Es importante que lea cuidadosamente las instrucciones de cada ejercicio y lo entienda perfectamente antes de realizarlo.</string>
    <string name="notas_fourth">Realice los ejercicios de forma lenta y con movimientos pausados y sostenidos.</string>
    <string name="notas_fifth">NO realice ejercicio alguno que le cause dolor y en caso de que esto suceda, consulte inmediatamente a su médico.</string>
    <string name="notas_six">Si cree que tiene una emergencia médica, consulte inmediatamente a su médico.</string>
    <string name="notas_seven"><b><font color="#902960">UltraMed Ⓡ</font></b> no se hace responsable de cualquier lesión o accidente que pueda resultar al utilizar esta aplicación. es exclusivamente la responsabilidad de cada persona y de nadie más el evaluar su capacidad física para valorar si puede realizar cada ejercicio.</string>
    <string name="desc_first">El objetivo principal de esta aplicación es mejorar su higiene articular y su grado de movilidad.</string>
    <string name="desc_second"><Dise></Dise>Mediante la aplicación usted podrá definir el horario y la periodicidad de su rutina, además podrá consultar reportes de su actividad diaria y mensual.</string>
    <string name="desc_third">El realizar la rutina completa de Higiene Articular le consumirá aproximadamente 10 min.de su tiempo y a cambio, su constancia y disciplina le redituará con creces en su calidad de vida.</string>
    <string name="desc_fourth">El realizar la rutina completa de Higiene Articular no le consumirá más de 10 min.de su tiempo y a cambio, su constancia y disciplina le redituará con creces en su calidad de vida.</string>
    <string name="cuello">Cuello</string>
    <string name="humbros">Hombros</string>
    <string name="codos">Codos</string>
    <string name="cadera">Columna</string>
    <string name="munacas">Manos</string>
    <string name="dedos">Manos</string>
    <string name="rodillas">Rodillas</string>
    <string name="tobillos">Tobillos</string>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="successfully_logout">Successfully Logout</string>
    <string name="something_went_wrong">Something went wrong Please try again.</string>
</resources>