<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/img_ultra_med" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="Higiene Articular"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_20"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="7dp"
            app:cardElevation="0dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="7dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/tv_one_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Notas Médicas"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

        </android.support.v7.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="90dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_25"
                        android:layout_marginRight="@dimen/dp_25"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/notas_first"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/seprator" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_25"
                        android:layout_marginRight="@dimen/dp_25"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/notas_second"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/seprator" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_25"
                        android:layout_marginRight="@dimen/dp_25"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/notas_third"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/seprator" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_25"
                        android:layout_marginRight="@dimen/dp_25"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/notas_fourth"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/seprator" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_25"
                        android:layout_marginRight="@dimen/dp_25"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/notas_fifth"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/seprator" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_25"
                        android:layout_marginRight="@dimen/dp_25"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/notas_six"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/seprator" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_25"
                        android:layout_marginRight="@dimen/dp_25"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/notas_seven"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/seprator" />
                </LinearLayout>


            </ScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">


                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="Si, estoy de acuerdo y acepto las condiciones anteriores" />
                    <!--android:text="por favor, verifique para continuar" />-->


                <!--submit button-->
                <android.support.v7.widget.CardView
                    android:id="@+id/btnAccept"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:layout_marginRight="@dimen/dp_25"
                    android:clickable="false"
                    android:layout_marginTop="@dimen/dp_10"
                    app:cardBackgroundColor="@color/accept_button"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Continuar"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_18"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>