<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/img_ultra_med" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="Higiene Articular"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_25"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="7dp"
            app:cardElevation="0dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="7dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/tv_one_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Descripción"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

        </android.support.v7.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F3F3F3"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="@string/desc_first"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="@string/desc_second"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F3F3F3"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="@string/desc_third"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="@string/desc_fourth"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <!--submit button-->
                <android.support.v7.widget.CardView
                    android:id="@+id/btnContinue"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_25"
                    android:layout_marginBottom="4dp"
                    app:cardBackgroundColor="@color/active"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Continuar"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_18"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</LinearLayout>